@@ -3,7 +3,7 @@
  * :tabSize=8:indentSize=8:noTabs=false:
  * :folding=explicit:collapseFolds=1:
  *
- * Copyright (C) 1999, 2000, 2001 Slava Pestov
+ * Copyright (C) 1999, 2003 Slava Pestov
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License
@@ -23,6 +23,7 @@
 package org.gjt.sp.jedit;
 
 //{{{ Imports
+import com.microstar.xml.*;
 import java.awt.datatransfer.*;
 import java.awt.Toolkit;
 import java.io.*;
@@ -54,7 +55,7 @@ import org.gjt.sp.util.Log;
  *
  * @author Slava Pestov
  * @author John Gellene (API documentation)
- * @version $Id: Registers.java,v 1.10 2003/02/08 18:53:02 spestov Exp $
+ * @version $Id: Registers.java,v 1.11 2003/03/11 02:02:03 spestov Exp $
  */
 public class Registers
 {
@@ -238,6 +239,12 @@ public class Registers
 	 */
 	public static Register getRegister(char name)
 	{
+		if(name != '$' && name != '%')
+		{
+			if(!loaded)
+				loadRegisters();
+		}
+
 		if(registers == null || name >= registers.length)
 			return null;
 		else
@@ -252,6 +259,15 @@ public class Registers
 	 */
 	public static void setRegister(char name, Register newRegister)
 	{
+		if(name != '%' && name != '$')
+		{
+			if(!loaded)
+				loadRegisters();
+
+			if(!loading)
+				modified = true;
+		}
+
 		if(name >= registers.length)
 		{
 			Register[] newRegisters = new Register[
@@ -272,24 +288,11 @@ public class Registers
 	 */
 	public static void setRegister(char name, String value)
 	{
-		if(name >= registers.length)
-		{
-			Register[] newRegisters = new Register[
-				Math.min(1<<16,name * 2)];
-			System.arraycopy(registers,0,newRegisters,0,
-				registers.length);
-			registers = newRegisters;
-			registers[name] = new StringRegister(value);
-		}
+		Register register = getRegister(name);
+		if(register != null)
+			register.setValue(value);
 		else
-		{
-			Register register = registers[name];
-
-			if(register != null)
-				register.setValue(value);
-			else
-				registers[name] = new StringRegister(value);
-		}
+			setRegister(name,new StringRegister(value));
 	} //}}}
 
 	//{{{ clearRegister() method
@@ -316,7 +319,36 @@ public class Registers
 	 */
 	public static Register[] getRegisters()
 	{
+		if(!loaded)
+			loadRegisters();
 		return registers;
+	} //}}}
+
+	//{{{ saveRegisters() method
+	public static void saveRegisters()
+	{
+		if(loaded && modified)
+		{
+			Log.log(Log.MESSAGE,Registers.class,"Saving " + registers);
+			File file1 = new File(MiscUtilities.constructPath(
+				jEdit.getSettingsDirectory(), "#registers.xml#save#"));
+			File file2 = new File(MiscUtilities.constructPath(
+				jEdit.getSettingsDirectory(), "registers.xml"));
+			if(file2.exists() && file2.lastModified() != registersModTime)
+			{
+				Log.log(Log.WARNING,Registers.class,file2 + " changed"
+					+ " on disk; will not save registers");
+			}
+			else
+			{
+				jEdit.backupSettingsFile(file2);
+				saveRegisters(file1);
+				file2.delete();
+				file1.renameTo(file2);
+			}
+			registersModTime = file2.lastModified();
+			modified = false;
+		}
 	} //}}}
 
 	//{{{ Register interface
@@ -441,6 +473,8 @@ public class Registers
 
 	//{{{ Private members
 	private static Register[] registers;
+	private static long registersModTime;
+	private static boolean loaded, loading, modified;
 
 	private Registers() {}
 
@@ -449,5 +483,190 @@ public class Registers
 		registers = new Register[256];
 		registers['$'] = new ClipboardRegister(Toolkit
 			.getDefaultToolkit().getSystemClipboard());
+	}
+
+	//{{{ loadRegisters() method
+	private static void loadRegisters()
+	{
+		File registerFile = new File(MiscUtilities.constructPath(
+			jEdit.getSettingsDirectory(),"registers.xml"));
+		if(registerFile.exists())
+			registersModTime = registerFile.lastModified();
+		loaded = true;
+		loadRegisters(registerFile);
+	} //}}}
+
+	//{{{ loadRegisters() method
+	private static void loadRegisters(File file)
+	{
+		Log.log(Log.MESSAGE,jEdit.class,"Loading " + file);
+
+		RegistersHandler handler = new RegistersHandler();
+		XmlParser parser = new XmlParser();
+		parser.setHandler(handler);
+		try
+		{
+			loading = true;
+			BufferedReader in = new BufferedReader(new FileReader(file));
+			parser.parse(null, null, in);
+		}
+		catch(XmlException xe)
+		{
+			int line = xe.getLine();
+			String message = xe.getMessage();
+			Log.log(Log.ERROR,Registers.class,file + ":" + line
+				+ ": " + message);
+		}
+		catch(FileNotFoundException fnf)
+		{
+			//Log.log(Log.DEBUG,Registers.class,fnf);
+		}
+		catch(Exception e)
+		{
+			Log.log(Log.ERROR,Registers.class,e);
+		}
+		finally
+		{
+			loading = false;
+		}
+	} //}}}
+
+	//{{{ saveRegisters() method
+	private static void saveRegisters(File file)
+	{
+		String lineSep = System.getProperty("line.separator");
+
+		try
+		{
+			BufferedWriter out = new BufferedWriter(
+				new FileWriter(file));
+
+			out.write("<?xml version=\"1.0\"?>");
+			out.write(lineSep);
+			out.write("<!DOCTYPE REGISTERS SYSTEM \"registers.dtd\">");
+			out.write(lineSep);
+			out.write("<REGISTERS>");
+			out.write(lineSep);
+
+			Register[] registers = getRegisters();
+			for(int i = 0; i < registers.length; i++)
+			{
+				Register register = registers[i];
+				if(register == null || i == '$' || i == '%')
+					continue;
+
+				out.write("<REGISTER NAME=\"");
+				if(i == '"')
+					out.write("&quot;");
+				else
+					out.write((char)i);
+				out.write("\">");
+				out.write(lineSep);
+
+				String text = register.toString();
+				for(int j = 0; j < text.length(); j++)
+				{
+					char ch = text.charAt(j);
+					switch(ch)
+					{
+					case '&':
+						out.write("&amp;");
+						break;
+					case '<':
+						out.write("&lt;");
+						break;
+					case '>':
+						out.write("&gt;");
+						break;
+					default:
+						out.write(ch);
+					}
+				}
+
+				out.write("</REGISTER>");
+				out.write(lineSep);
+			}
+
+			out.write("</REGISTERS>");
+			out.write(lineSep);
+
+			out.close();
+		}
+		catch(Exception e)
+		{
+			Log.log(Log.ERROR,Registers.class,e);
+		}
+	} //}}}
+
+	//}}}
+
+	//{{{ RegistersHandler class
+	static class RegistersHandler extends HandlerBase
+	{
+		//{{{ resolveEntity() method
+		public Object resolveEntity(String publicId, String systemId)
+		{
+			if("registers.dtd".equals(systemId))
+			{
+				// this will result in a slight speed up, since we
+				// don't need to read the DTD anyway, as AElfred is
+				// non-validating
+				return new StringReader("<!-- -->");
+
+				/* try
+				{
+					return new BufferedReader(new InputStreamReader(
+						getClass().getResourceAsStream("registers.dtd")));
+				}
+				catch(Exception e)
+				{
+					Log.log(Log.ERROR,this,"Error while opening"
+						+ " recent.dtd:");
+					Log.log(Log.ERROR,this,e);
+				} */
+			}
+
+			return null;
+		} //}}}
+
+		//{{{ attribute() method
+		public void attribute(String aname, String value, boolean isSpecified)
+		{
+			if(aname.equals("NAME"))
+				registerName = value;
+		} //}}}
+
+		//{{{ doctypeDecl() method
+		public void doctypeDecl(String name, String publicId,
+			String systemId) throws Exception
+		{
+			if("REGISTERS".equals(name))
+				return;
+
+			Log.log(Log.ERROR,this,"registers.xml: DOCTYPE must be REGISTERS");
+		} //}}}
+
+		//{{{ endElement() method
+		public void endElement(String name)
+		{
+			if(name.equals("REGISTER"))
+			{
+				if(name == null || name.length() != 1)
+					Log.log(Log.ERROR,this,"Malformed NAME: " + registerName);
+				else
+					setRegister(registerName.charAt(0),charData);
+			}
+		} //}}}
+
+		//{{{ charData() method
+		public void charData(char[] ch, int start, int length)
+		{
+			charData = new String(ch,start,length);
+		} //}}}
+
+		//{{{ Private members
+		private String registerName;
+		private String charData;
+		//}}}
 	} //}}}
 }
